# hypnos

./: README.md
cad/: README.md
firmware/: .gitignore  platformio.ini  sdkconfig
firmware/components/backlight/: CMakeLists.txt  backlight.cpp
firmware/components/config_server/: CMakeLists.txt  CMakeRC.cmake  config_server.cpp
firmware/components/config_server/include/: config_server.h
firmware/components/config_server/resources/: index.html
firmware/components/eightsleep/: CMakeLists.txt  eightsleep.cpp
firmware/components/encoder/: CMakeLists.txt  encoder.cpp
firmware/components/expected/: CMakeLists.txt
firmware/components/fonts/: CMakeLists.txt  montserrat_56_digits.c
firmware/components/http_cxx/: CMakeLists.txt  http_cxx.cpp
firmware/components/hypnos_config/: CMakeLists.txt  hypnos_config.cpp
firmware/components/lvgl_port/: CMakeLists.txt  Kconfig  lvgl_port.cpp
firmware/components/prompts/: CMakeLists.txt  prompts.cpp
firmware/components/screens/: CMakeLists.txt  screens.cpp
firmware/components/statics/: CMakeLists.txt  statics.cpp
firmware/components/styles/: CMakeLists.txt  styles.cpp
firmware/components/temp_ticks/: CMakeLists.txt  temp_ticks.c
firmware/components/wifi/: CMakeLists.txt  wifi.cpp
firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
firmware/main/apps/: base_app.h
firmware/src/: main.cpp
pcb/Photodiode/: .gitignore  Photodiode.kicad_pcb  Photodiode.kicad_pro  Photodiode.kicad_sch
pcb/SleepControlPico/: .gitignore  SleepControlPico.kicad_pcb  SleepControlPico.kicad_pro  SleepControlPico.kicad_sch
(+56 files in other folders)
